example/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-metrics-consumer
  labels:
    application: custom-metrics-consumer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    application: custom-metrics-consumer
  type: ClusterIP
