example/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-metrics-consumer
  labels:
    application: custom-metrics-consumer
spec:
  rules:
  - host: custom-metrics.example.org
    http:
      paths:
      - backend:
          serviceName: custom-metrics-consumer
          servicePort: 80
